# LocoVR-NF

./: .gitignore  MULTILAYER.md  README.md  index.html  multilayer.html  pyproject.toml  run_multilayer.sh
locovrnf/: affordance.py  coarse.py  compare.py  config.py  coordcheck.py  crossspace.py  dataio.py  export_web.py  fetch.py  filter.py  model.py  optimize.py  register.py  traj.py
results/: b_filter.json  c0_coordcheck.json  c1_affordance.json  c2_crossspace.json  c3_traj.json  c5_optimize.json  h_coarse.json  x_compare.json
webdemo/: aff_testvecs.json  affordance.json  stepflow.js  stepflow.json  testvecs.json
